--- a/src/components/_buttons.scss
+++ b/src/components/_buttons.scss
@@ -60,28 +60,15 @@ button,
 }
 
 a {
-  position: relative;
+  background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAKAAAAAOCAYAAACo2RezAAAACXBIW…kWb0wG5fsPT/IbRPnBu+/FfsTW/cSWfxbZ2/zFoKXl7+Uv7qvDRE7XIdIAAAAASUVORK5CYII=);
+  background-repeat: repeat-x;
+  background-position: 0 0.85em;
+  background-size: 100% 4px;
   text-decoration: none;
-
-  &::after {
-    background: $secondary;
-    border-bottom-right-radius: 225px 15px;
-    content: '';
-    height: 0.15em;
-    left: 0;
-    position: absolute;
-    top: 1.1em;
-    width: 100%;
-  }
 
   &:visited {
     color: $primary;
     text-decoration: none;
-
-    &::after {
-      background: $primary;
-      content: '';
-    }
   }
 }
 
