changed link styling to use background-image

--- a/src/components/_buttons.scss
+++ b/src/components/_buttons.scss
@@ -60,9 +60,9 @@ button,
 }
 
 a {
-  background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAKAAAAAOCAYAAACo2RezAAAACXBIW…kWb0wG5fsPT/IbRPnBu+/FfsTW/cSWfxbZ2/zFoKXl7+Uv7qvDRE7XIdIAAAAASUVORK5CYII=);
-  background-repeat: repeat-x;
+  background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAKAAAAAOCAYAAACo2RezAAAACXBIW…kWb0wG5fsPT/IbRPnBu+/FfsTW/cSWfxbZ2/zFoKXl7+Uv7qvDRE7XIdIAAAAASUVORK5CYII=');
   background-position: 0 0.85em;
+  background-repeat: repeat-x;
   background-size: 100% 4px;
   text-decoration: none;
 
