--- a/src/components/_buttons.scss
+++ b/src/components/_buttons.scss
@@ -9,7 +9,7 @@ button,
   border: 2px solid $primary;
   color: $primary;
   cursor: pointer;
-  display: inline;
+  display: inline-block;
   font-size: 1rem;
   outline: none;
   padding: 0.75rem;
