--- a/src/styles.scss
+++ b/src/styles.scss
@@ -25,6 +25,7 @@
 @import 'components/alerts';
 @import 'components/article';
 @import 'components/badges';
+@import 'components/breadcrumb';
 @import 'components/buttons';
 @import 'components/cards';
 @import 'components/forms';
