carousel import fix

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -27,6 +27,7 @@
 @import 'components/badges';
 @import 'components/buttons';
 @import 'components/cards';
+@import 'components/carousel';
 @import 'components/forms';
 @import 'components/modals';
 @import 'components/popovers';
