--- a/src/styles.scss
+++ b/src/styles.scss
@@ -28,6 +28,7 @@
 @import 'components/buttons';
 @import 'components/cards';
 @import 'components/forms';
+@import 'components/megamenu';
 @import 'components/modals';
 @import 'components/popovers';
 @import 'components/progress';
