Ripple effect and some basic animations

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -17,6 +17,7 @@
 @import 'content/tables';
 
 /* Utilities */
+@import 'utilities/animations';
 @import 'utilities/borders';
 @import 'utilities/shadows';
 
