Update broken url

--- a/docs/layouts/partials/nav/sidebar.html
+++ b/docs/layouts/partials/nav/sidebar.html
@@ -25,7 +25,7 @@
     {{ end }}
     <div class='paper'>
       <div class="row flex-center">
-        <p>Made with 💛 by <a href="https://vlaservi.ch" target="_blank">Rhyne</a> and some <a href="https://github.com/rhyneav/papercss/graphs/contributors">fantastic contributors</a>!</p>
+        <p>Made with 💛 by <a href="https://vlaservich.com" target="_blank">Rhyne</a> and some <a href="https://github.com/rhyneav/papercss/graphs/contributors">fantastic contributors</a>!</p>
       </div>
     </div>
 </div>
