--- a/src/components/_modals.scss
+++ b/src/components/_modals.scss
@@ -24,9 +24,11 @@
   }
 
   .modal-body {
+    @include color('color', 'primary');
+    @include color('background', 'main-background');
     @include transition;
     backface-visibility: hidden;
-    background: $white;
+
     border: 2px solid $muted-light;
     left: 50%;
     padding: 1.25rem;
@@ -41,8 +43,8 @@
   }
 
   .btn-close {
+    @include color('color', 'primary-light');
     @include transition;
-    color: $primary-light;
     cursor: pointer;
     font-size: 30px;
     height: 1.1rem;
@@ -55,7 +57,7 @@
     &:hover,
     &:active,
     &:focus {
-      color: $primary;
+      @include color('color', 'primary');
     }
   }
 
@@ -67,7 +69,7 @@
 
   h5,
   .modal-subtitle {
-    color: $secondary;
+    @include color('color', 'secondary');
     margin-bottom: 0.5rem;
     margin-top: 0;
   }
@@ -101,7 +103,7 @@
     &:hover,
     &:focus,
     &:visited {
-      color: $primary;
+      @include color('color', 'primary');
       text-decoration: none;
     }
   }
