--- a/src/content/_tables.scss
+++ b/src/content/_tables.scss
@@ -29,7 +29,7 @@ table {
   }
 
   &.table-hover tbody tr:hover {
-    color: $secondary;
+    @include color('color', 'secondary');
   }
 
   &.table-alternating tbody tr:nth-of-type(even) {
