--- a/src/utilities/_borders.scss
+++ b/src/utilities/_borders.scss
@@ -1,6 +1,9 @@
 
 .border {
-  border: 2px solid $primary;
+  @include color('border-color','primary' );
+  border-style: solid;
+  border-width: 2px;
+
 }
 
 .border,
