--- a/src/components/_accordion.scss
+++ b/src/components/_accordion.scss
@@ -21,7 +21,7 @@
     display: none;
 
     &:checked + label {
-      color: $primary;
+      @include color('color', 'primary');
     }
 
     &[id^='collapsible']:checked~div.collapsible-body {
@@ -33,8 +33,8 @@
   }
 
   label {
+    @include color('color', 'primary');
     border-bottom: 1px solid $muted-light;
-    color: $primary;
     display: inline-block;
     font-weight: 600;
     margin: 0 0 -1px;
@@ -42,7 +42,7 @@
     text-align: center;
 
     &:hover {
-      color: $muted;
+      @include color('color', 'muted');
       cursor: pointer;
     }
   }
