--- a/src/components/_badges.scss
+++ b/src/components/_badges.scss
@@ -1,9 +1,9 @@
 .badge {
   @include border-style();
-  background-color: $muted;
+  @include color('color', 'primary-text');
+  @include color('background-color', 'muted');
   border: 2px solid $primary;
   border-color: transparent;
-  color: $white;
   display: inline-block;
   font-size: 75%;
   font-weight: 700;
