--- a/src/components/_buttons.scss
+++ b/src/components/_buttons.scss
@@ -4,10 +4,12 @@ button,
   @include border-style();
   @include shadow();
   @include transition();
+  @include color('color', 'primary');
+  @include color('border-color', 'primary');
+  @include color('background-color', 'main-background');
   align-self: center;
-  background: transparent;
-  border: 2px solid $primary;
-  color: $primary;
+  background-image: none;
+  border: 2px solid;
   cursor: pointer;
   display: inline-block;
   font-size: 1rem;
@@ -60,14 +62,23 @@ button,
 }
 
 a {
-  background-image: linear-gradient(5deg, transparent 65%, $secondary 80%, transparent 90%), linear-gradient(165deg, transparent 5%, $secondary 15%, transparent 25%), linear-gradient(165deg, transparent 45%, $secondary 55%, transparent 65%), linear-gradient(15deg, transparent 25%, $secondary 35%, transparent 50%);
+  @include color('color', 'secondary');
+  background-image: linear-gradient (
+    5deg,
+    transparent 65%,
+    $secondary 80%,
+    transparent 90%
+  ),
+    linear-gradient(165deg, transparent 5%, $secondary 15%, transparent 25%),
+    linear-gradient(165deg, transparent 45%, $secondary 55%, transparent 65%),
+    linear-gradient(15deg, transparent 25%, $secondary 35%, transparent 50%);
   background-position: 0 90%;
   background-repeat: repeat-x;
   background-size: 4px 3px;
   text-decoration: none;
 
   &:visited {
-    color: $primary;
+    @include color('color', 'primary');
     text-decoration: none;
   }
 }
