--- a/src/content/_code.scss
+++ b/src/content/_code.scss
@@ -1,24 +1,27 @@
 code {
-  background-color: lighten($primary, 70%);
+  @include color('color', 'secondary');
+  @include color('background-color', 'primary-light');
   border-radius: 3px;
-  color: $secondary;
   font-size: 80%;
   padding: 2px 4px;
 }
 
 kbd {
-  background-color: $primary;
+  @include color('color', 'primary-text');
+  @include color('background-color', 'primary');
   border-radius: 3px;
-  color: $white;
   font-size: 80%;
   padding: 2px 4px;
 }
 
 pre {
-  background-color: lighten($primary, 73%);
-  border: 1px solid lighten($primary, 50%);
+  @include color('color', 'primary');
+  @include color('background-color', 'main-background');
+  @include color('border-color', 'main-background-light');
+
   border-radius: 3px;
-  color: $primary;
+  border-style: solid;
+  border-width: 1px;
   display: block;
   font-size: 80%;
   line-height: 1.5;
@@ -29,7 +32,7 @@ pre {
   word-wrap: break-word;
 
   code {
-    background: transparent;
+    @include color('background-color', 'main-background');
     color: inherit;
     display: block;
     font-size: inherit;
