--- a/src/content/_images.scss
+++ b/src/content/_images.scss
@@ -1,6 +1,9 @@
+// here
 img {
   @include border-style();
-  border: 2px solid $primary;
+  @include color('border-color', 'primary');
+  border-style: solid;
+  border-width: 2px;
   display: block;
   height: auto;
   max-width: 100%;
