chore: use color mixin in borders

--- a/src/utilities/_borders.scss
+++ b/src/utilities/_borders.scss
@@ -1,9 +1,6 @@
-
 .border {
   @include color('border-color','primary' );
-  border-style: solid;
-  border-width: 2px;
-
+  border: 2px solid;
 }
 
 .border,
@@ -38,11 +35,12 @@
 }
 
 .child-borders>* {
-  border: 2px solid $primary;
+  @include color('border-color', 'primary');
+  border: 2px solid;
 }
 
 .border-white {
-  border-color: $white;
+  @include color('border-color', 'white');
 }
 
 .border-dotted {
@@ -59,6 +57,6 @@
 
 @each $colorName, $color in $colors {
   .border-#{$colorName} {
-    border-color: $color;
+    @include color('border-color', #{$colorName});
   }
 }
